results/no_framework/openai/mbpp/test_scripts/MbppEval-129_6.out
Error running code: unterminated string literal (detected at line 6) (<string>, line 6)
